deploymentservice.yml

---
apiVersion: v1
kind: Namespace
metadata:
  name: mkyapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: mkyapp
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mkyapp
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mkyapp
    spec:
      containers:
      - image: kumaryadav989/digital:latest
        imagePullPolicy: Always
        name: mkyapp
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: service-mky
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: mkyapp
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   namespace: game-2048
#   name: ingress-2048
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
# spec:
#   ingressClassName: alb
#   rules:
#     - http:
#         paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: service-2048
#               port:
#                 number: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress-mky
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP": 8080}, {"HTTPS": 8443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:148328080927:certificate/0d8ca854-9ba4-4014-abcd-a1f101a3f9de
spec:
  #ingressClassName: alb
  rules:
  - host: "mkyapp.kumaryadav.shop"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-mky
            port:
              number: 80
